--- a/cfg/lite_yolov3_face.cfg
+++ b/cfg/lite_yolov3_face.cfg
@@ -1,6 +1,6 @@
 [net]
 batch=32
-subdivisions=2
+subdivisions=1
 # Training
 width=416
 height=416
@@ -27,520 +27,242 @@ scales=.1,.1
 #cutmix=1
 #mosaic=1
 
-# conv1
+#conv1
 [convolutional]
+batch_normalize=1
 filters=8
 size=3
-pad=1
 stride=2
-batch_normalize=1
+pad=1
 activation=relu
 
-# conv2_1_expand
-[convolutional]
-filters=8
-size=1
-stride=1
-pad=0
-batch_normalize=1
-activation=relu
-
-# conv2_1_dwise
+#conv2_1/dw
 [convolutional]
 groups=8
 filters=8
+batch_normalize=1
 size=3
 stride=1
 pad=1
-batch_normalize=1
 activation=relu
 
-# conv2_1_linear
+#conv2_1/sep
 [convolutional]
-filters=4
-size=1
-stride=1
-pad=0
 batch_normalize=1
-activation=linear
-
-# conv2_2_expand
-[convolutional]
-filters=24
-size=1
-stride=1
-pad=0
-batch_normalize=1
-activation=relu
-
-# conv2_2_dwise
-[convolutional]
-groups=24
-filters=24
-size=3
-pad=1
-stride=2
-batch_normalize=1
-activation=relu
-
-# conv2_2_linear
-[convolutional]
-filters=6
-size=1
-stride=1
-pad=0
-batch_normalize=1
-activation=linear
-
-# conv3_1_expand
-[convolutional]
-filters=36
-size=1
-stride=1
-pad=0
-batch_normalize=1
-activation=relu
-
-# conv3_1_dwise
-[convolutional]
-groups=36
-filters=36
-size=3
-stride=1
-pad=1
-batch_normalize=1
-activation=relu
-
-# conv3_1_linear
-[convolutional]
-filters=6
-size=1
-stride=1
-pad=0
-batch_normalize=1
-activation=linear
-
-# block_3_1
-[shortcut]
-from=-4
-activation=linear
-
-# conv_3_2_expand
-[convolutional]
-filters=36
-size=1
-stride=1
-pad=0
-batch_normalize=1
-activation=relu
-
-# conv_3_2_dwise
-[convolutional]
-groups=36
-filters=36
-size=3
-pad=1
-stride=2
-batch_normalize=1
-activation=relu
-
-# conv_3_2_linear
-[convolutional]
-filters=8
-size=1
-stride=1
-pad=0
-batch_normalize=1
-activation=linear
-
-# conv_4_1_expand
-[convolutional]
-filters=48
-size=1
-stride=1
-pad=0
-batch_normalize=1
-activation=relu
-
-# conv_4_1_dwise
-[convolutional]
-groups=48
-filters=48
-size=3
-stride=1
-pad=1
-batch_normalize=1
-activation=relu
-
-# conv_4_1_linear
-[convolutional]
-filters=8
-size=1
-stride=1
-pad=0
-batch_normalize=1
-activation=linear
-
-# block_4_1
-[shortcut]
-from=-4
-activation=linear
-
-# conv_4_2_expand
-[convolutional]
-filters=48
-size=1
-stride=1
-pad=0
-batch_normalize=1
-activation=relu
-
-# conv_4_2_dwise
-[convolutional]
-groups=48
-filters=48
-size=3
-stride=1
-pad=1
-batch_normalize=1
-activation=relu
-
-# conv_4_2_linear
-[convolutional]
-filters=8
-size=1
-stride=1
-pad=0
-batch_normalize=1
-activation=linear
-
-# block_4_2
-[shortcut]
-from=-4
-activation=linear
-
-# conv_4_3_expand
-[convolutional]
-filters=48
-size=1
-stride=1
-pad=0
-batch_normalize=1
-activation=relu
-
-# conv_4_3_dwise
-[convolutional]
-groups=48
-filters=48
-size=3
-stride=2
-pad=1
-batch_normalize=1
-activation=relu
-
-# conv_4_3_linear
-[convolutional]
 filters=16
 size=1
 stride=1
 pad=0
-batch_normalize=1
-activation=linear
-
-# conv_4_4_expand
-[convolutional]
-filters=96
-size=1
-stride=1
-pad=0
-batch_normalize=1
 activation=relu
 
-# conv_4_4_dwise
-[convolutional]
-groups=96
-filters=96
-size=3
-stride=1
-pad=1
-batch_normalize=1
-activation=relu
 
-# conv_4_4_linear
+#conv2_2/dw
 [convolutional]
+groups=16
 filters=16
-size=1
-stride=1
-pad=0
 batch_normalize=1
-activation=linear
-
-# block_4_4
-[shortcut]
-from=-4
-activation=linear
-
-# conv_4_5_expand
-[convolutional]
-filters=96
-size=1
-stride=1
-pad=0
-batch_normalize=1
-activation=relu
-
-# conv_4_5_dwise
-[convolutional]
-groups=96
-filters=96
 size=3
-stride=1
-pad=1
-batch_normalize=1
-activation=relu
-
-# conv_4_5_linear
-[convolutional]
-filters=16
-size=1
-stride=1
-pad=0
-batch_normalize=1
-activation=linear
-
-# block_4_5
-[shortcut]
-from=-4
-activation=linear
-
-# conv_4_6_expand
-[convolutional]
-filters=96
-size=1
-stride=1
-pad=0
-batch_normalize=1
-activation=relu
-
-# conv_4_6_dwise
-[convolutional]
-groups=96
-filters=96
-size=3
-stride=1
-pad=1
-batch_normalize=1
-activation=relu
-
-# conv_4_6_linear
-[convolutional]
-filters=16
-size=1
-stride=1
-pad=0
-batch_normalize=1
-activation=linear
-
-# block_4_6
-[shortcut]
-from=-4
-activation=linear
-
-# conv_4_7_expand
-[convolutional]
-filters=96
-size=1
-stride=1
-pad=0
-batch_normalize=1
-activation=relu
-
-# conv_4_7_dwise
-[convolutional]
-groups=96
-filters=96
-size=3
-pad=1
-stride=1
-batch_normalize=1
-activation=relu
-
-# conv_4_7_linear
-[convolutional]
-filters=24
-size=1
-stride=1
-pad=0
-batch_normalize=1
-activation=linear
-
-# conv_5_1_expand
-[convolutional]
-filters=144
-size=1
-stride=1
-pad=0
-batch_normalize=1
-activation=relu
-
-# conv_5_1_dwise
-[convolutional]
-groups=144
-filters=144
-size=3
-stride=1
-pad=1
-batch_normalize=1
-activation=relu
-
-# conv_5_1_linear
-[convolutional]
-filters=24
-size=1
-stride=1
-pad=0
-batch_normalize=1
-activation=linear
-
-# block_5_1
-[shortcut]
-from=-4
-activation=linear
-
-# conv_5_2_expand
-[convolutional]
-filters=144
-size=1
-stride=1
-pad=0
-batch_normalize=1
-activation=relu
-
-# conv_5_2_dwise
-[convolutional]
-groups=144
-filters=144
-size=3
-stride=1
-pad=1
-batch_normalize=1
-activation=relu
-
-# conv_5_2_linear
-[convolutional]
-filters=24
-size=1
-stride=1
-pad=0
-batch_normalize=1
-activation=linear
-
-# block_5_2
-[shortcut]
-from=-4
-activation=linear
-
-# conv_5_3_expand
-[convolutional]
-filters=144
-size=1
-stride=1
-pad=0
-batch_normalize=1
-activation=relu
-
-# conv_5_3_dwise
-[convolutional]
-groups=144
-filters=144
-size=3
-pad=1
 stride=2
-batch_normalize=1
+pad=1
 activation=relu
 
-# conv_5_3_linear
+#conv2_2/sep
 [convolutional]
-filters=40
+batch_normalize=1
+filters=32
 size=1
 stride=1
 pad=0
-batch_normalize=1
-activation=linear
-
-# conv_6_1_expand
-[convolutional]
-filters=240
-size=1
-stride=1
-pad=0
-batch_normalize=1
 activation=relu
 
-# conv_6_1_dwise
+#conv3_1/dw
 [convolutional]
-groups=240
-filters=240
+groups=32
+filters=32
+batch_normalize=1
 size=3
 stride=1
 pad=1
-batch_normalize=1
 activation=relu
 
-# conv_6_1_linear
+
+#conv3_1/sep
 [convolutional]
-filters=40
+batch_normalize=1
+filters=32
 size=1
 stride=1
 pad=0
-batch_normalize=1
-activation=linear
+activation=relu
 
-# block_6_1
-[shortcut]
-from=-4
-activation=linear
-
-# conv_6_2_expand
+#conv3_2/dw
 [convolutional]
-filters=240
+groups=32
+filters=32
+batch_normalize=1
+size=3
+stride=2
+pad=1
+activation=relu
+
+#conv3_2/sep
+[convolutional]
+batch_normalize=1
+filters=64
 size=1
 stride=1
 pad=0
-batch_normalize=1
 activation=relu
 
-# conv_6_2_dwise
+#conv4_1/dw
 [convolutional]
-groups=240
-filters=240
+groups=64
+filters=64
+batch_normalize=1
 size=3
 stride=1
 pad=1
-batch_normalize=1
 activation=relu
 
-# conv_6_2_linear
+#conv4_1/sep
 [convolutional]
-filters=40
+batch_normalize=1
+filters=64
 size=1
 stride=1
 pad=0
-batch_normalize=1
-activation=linear
+activation=relu
 
-# block_6_2
-[shortcut]
-from=-4
-activation=linear
-
-# conv_6_3_expand
+#conv4_2/dw
 [convolutional]
-filters=240
+groups=64
+filters=64
+batch_normalize=1
+size=3
+stride=2
+pad=1
+activation=relu
+
+#conv4_2/sep
+[convolutional]
+batch_normalize=1
+filters=128
 size=1
 stride=1
 pad=0
+activation=relu
+
+#conv5_1/dw
+[convolutional]
+groups=128
+filters=128
 batch_normalize=1
+size=3
+stride=1
+pad=1
+activation=relu
+
+#conv5_1/sep
+[convolutional]
+batch_normalize=1
+filters=128
+size=1
+stride=1
+pad=0
+activation=relu
+
+#conv5_2/dw
+[convolutional]
+groups=128
+filters=128
+batch_normalize=1
+size=3
+stride=1
+pad=1
+activation=relu
+
+#conv5_2/sep
+[convolutional]
+batch_normalize=1
+filters=128
+size=1
+stride=1
+pad=0
+activation=relu
+
+#conv5_3/dw
+[convolutional]
+groups=128
+filters=128
+batch_normalize=1
+size=3
+stride=1
+pad=1
+activation=relu
+
+#conv5_3/sep
+[convolutional]
+batch_normalize=1
+filters=128
+size=1
+stride=1
+pad=0
+activation=relu
+
+#conv5_4/dw
+[convolutional]
+groups=128
+filters=128
+batch_normalize=1
+size=3
+stride=1
+pad=1
+activation=relu
+
+#conv5_4/sep
+[convolutional]
+batch_normalize=1
+filters=128
+size=1
+stride=1
+pad=0
+activation=relu
+
+#conv5_5/dw
+[convolutional]
+groups=128
+filters=128
+batch_normalize=1
+size=3
+stride=1
+pad=1
+activation=relu
+
+#conv5_5/sep
+[convolutional]
+batch_normalize=1
+filters=128
+size=1
+stride=1
+pad=0
+activation=relu
+
+#conv5_6/dw
+[convolutional]
+groups=128
+filters=128
+batch_normalize=1
+size=3
+stride=2
+pad=1
+activation=relu
+
+#conv5_6/sep
+[convolutional]
+batch_normalize=1
+filters=128
+size=1
+stride=1
 activation=relu
 
 
@@ -579,14 +301,31 @@ layers = -3
 filters=64
 groups=64
 batch_normalize=1
-size=5
+size=3
 stride=1
 pad=1
 activation=leaky
 
 [convolutional]
-filters=64
-groups=64
+filters=32
+batch_normalize=1
+size=1
+stride=1
+pad=1
+activation=leaky
+
+
+[convolutional]
+filters=32
+groups=32
+batch_normalize=1
+size=3
+stride=1
+pad=1
+activation=leaky
+
+[convolutional]
+filters=32
 batch_normalize=1
 size=1
 stride=1
@@ -594,38 +333,34 @@ pad=1
 activation=leaky
 
 [route]
-layers = -6
+layers = -3
 
 [convolutional]
-filters=64
-groups=64
+filters=32
+groups=32
 batch_normalize=1
-size=7
+size=5
 stride=1
 pad=1
 activation=leaky
 
 [convolutional]
-filters=64
-groups=64
+filters=32
 batch_normalize=1
 size=1
 stride=1
 pad=1
 activation=leaky
 
+
+
+[route]
+layers = -1,-4
+
 [shortcut]
-from=-1,-4,-7
+from=-1,-10
 activation=leaky
 
-[convolutional]
-filters=64
-groups=64
-batch_normalize=1
-size=3
-stride=1
-pad=1
-activation=leaky
 
 [convolutional]
 batch_normalize=1
@@ -650,7 +385,7 @@ truth_thresh = 1
 
 
 [route]
-layers = -14
+layers = -16
 
 [upsample]
 stride=2
@@ -663,7 +398,7 @@ stride=1
 activation=leaky
 
 [route]
-layers = 48
+layers = 22
 
 [convolutional]
 batch_normalize=1
@@ -675,7 +410,6 @@ activation=leaky
 [shortcut]
 activation=leaky
 from=-3
-
 #ssh
 [convolutional]
 batch_normalize=1
@@ -710,14 +444,31 @@ layers = -3
 filters=64
 groups=64
 batch_normalize=1
-size=5
+size=3
 stride=1
 pad=1
 activation=leaky
 
 [convolutional]
-filters=64
-groups=64
+filters=32
+batch_normalize=1
+size=1
+stride=1
+pad=1
+activation=leaky
+
+
+[convolutional]
+filters=32
+groups=32
+batch_normalize=1
+size=3
+stride=1
+pad=1
+activation=leaky
+
+[convolutional]
+filters=32
 batch_normalize=1
 size=1
 stride=1
@@ -725,40 +476,32 @@ pad=1
 activation=leaky
 
 [route]
-layers = -6
+layers = -3
 
 [convolutional]
-filters=64
-groups=64
+filters=32
+groups=32
 batch_normalize=1
-size=7
+size=5
 stride=1
 pad=1
 activation=leaky
 
 [convolutional]
-filters=64
-groups=64
+filters=32
 batch_normalize=1
 size=1
 stride=1
 pad=1
 activation=leaky
-;
-;[route]
-;layers = -1,-4,-7
+
+
+
+[route]
+layers = -1,-4
 
 [shortcut]
-from=-1,-4,-7
-activation=leaky
-
-[convolutional]
-filters=64
-groups=64
-batch_normalize=1
-size=3
-stride=1
-pad=1
+from=-1,-10
 activation=leaky
 
 
@@ -785,7 +528,7 @@ truth_thresh = 1
 
 
 [route]
-layers = -14
+layers = -16
 
 [upsample]
 stride=2
@@ -800,7 +543,7 @@ activation=leaky
 
 
 [route]
-layers = 22
+layers = 10
 
 
 [convolutional]
@@ -814,7 +557,6 @@ activation=leaky
 [shortcut]
 activation=leaky
 from=-3
-
 
 #ssh
 [convolutional]
@@ -850,14 +592,31 @@ layers = -3
 filters=64
 groups=64
 batch_normalize=1
-size=5
+size=3
 stride=1
 pad=1
 activation=leaky
 
 [convolutional]
-filters=64
-groups=64
+filters=32
+batch_normalize=1
+size=1
+stride=1
+pad=1
+activation=leaky
+
+
+[convolutional]
+filters=32
+groups=32
+batch_normalize=1
+size=3
+stride=1
+pad=1
+activation=leaky
+
+[convolutional]
+filters=32
 batch_normalize=1
 size=1
 stride=1
@@ -865,40 +624,32 @@ pad=1
 activation=leaky
 
 [route]
-layers = -6
+layers = -3
 
 [convolutional]
-filters=64
-groups=64
+filters=32
+groups=32
 batch_normalize=1
-size=7
+size=5
 stride=1
 pad=1
 activation=leaky
 
 [convolutional]
-filters=64
-groups=64
+filters=32
 batch_normalize=1
 size=1
 stride=1
 pad=1
 activation=leaky
 
-;[route]
-;layers = -1,-4,-7
+
+
+[route]
+layers = -1,-4
 
 [shortcut]
-from=-1,-4,-7
-activation=leaky
-
-[convolutional]
-filters=64
-groups=64
-batch_normalize=1
-size=3
-stride=1
-pad=1
+from=-1,-10
 activation=leaky
 
 
