实现 hswish hsigmode

--- a/cfg/mbv3small_yolov3_face.cfg
+++ b/cfg/mbv3small_yolov3_face.cfg
@@ -19,266 +19,501 @@ hue=.1
 learning_rate=0.002
 burn_in=1000
 ;max_batches = 500500
-max_batches = 85000
+max_batches = 65000
 policy=steps
-steps=65000,75000
+steps=35000,45000
 scales=.1,.1
 
 #cutmix=1
 #mosaic=1
 
-#conv1
+# conv1
 [convolutional]
-batch_normalize=1
-filters=8
+filters=16
 size=3
+pad=1
 stride=2
-pad=1
-activation=relu
-
-#conv2_1/dw
-[convolutional]
-groups=8
-filters=8
 batch_normalize=1
-size=3
-stride=1
-pad=1
-activation=relu
+activation=hswish
 
-#conv2_1/sep
+# block 1-1
 [convolutional]
-batch_normalize=1
 filters=16
 size=1
 stride=1
 pad=0
+batch_normalize=1
 activation=relu
 
 
-#conv2_2/dw
 [convolutional]
 groups=16
 filters=16
-batch_normalize=1
 size=3
 stride=2
 pad=1
+batch_normalize=1
 activation=relu
 
-#conv2_2/sep
 [convolutional]
-batch_normalize=1
-filters=32
+filters=16
 size=1
 stride=1
 pad=0
-activation=relu
-
-#conv3_1/dw
-[convolutional]
-groups=32
-filters=32
 batch_normalize=1
-size=3
+activation=linear
+
+
+#squeeze-n-excitation
+[avgpool]
+
+# squeeze ratio r=4
+[convolutional]
+batch_normalize=1
+filters=4
+size=1
 stride=1
-pad=1
 activation=relu
 
-
-#conv3_1/sep
+# excitation
 [convolutional]
 batch_normalize=1
-filters=32
+filters=16
+size=1
+stride=1
+activation=hsigmode
+
+# multiply channels
+[scale_channels]
+from=-4
+
+# block 2-1
+[convolutional]
+filters=72
 size=1
 stride=1
 pad=0
+batch_normalize=1
 activation=relu
 
-#conv3_2/dw
-[convolutional]
-groups=32
-filters=32
-batch_normalize=1
-size=3
-stride=2
-pad=1
-activation=relu
 
-#conv3_2/sep
 [convolutional]
-batch_normalize=1
-filters=64
-size=1
-stride=1
-pad=0
-activation=relu
-
-#conv4_1/dw
-[convolutional]
-groups=64
-filters=64
-batch_normalize=1
-size=3
-stride=1
-pad=1
-activation=relu
-
-#conv4_1/sep
-[convolutional]
-batch_normalize=1
-filters=64
-size=1
-stride=1
-pad=0
-activation=relu
-
-#conv4_2/dw
-[convolutional]
-groups=64
-filters=64
-batch_normalize=1
+groups=72
+filters=72
 size=3
 stride=2
 pad=1
+batch_normalize=1
 activation=relu
 
-#conv4_2/sep
 [convolutional]
-batch_normalize=1
-filters=128
+filters=24
 size=1
 stride=1
 pad=0
+batch_normalize=1
+activation=linear
+
+
+# block 2-2
+
+
+[convolutional]
+filters=88
+size=1
+stride=1
+pad=0
+batch_normalize=1
 activation=relu
 
-#conv5_1/dw
+
 [convolutional]
-groups=128
-filters=128
-batch_normalize=1
+groups=88
+filters=88
 size=3
 stride=1
 pad=1
+batch_normalize=1
 activation=relu
 
-#conv5_1/sep
+
 [convolutional]
-batch_normalize=1
-filters=128
+filters=24
 size=1
 stride=1
 pad=0
-activation=relu
-
-#conv5_2/dw
-[convolutional]
-groups=128
-filters=128
 batch_normalize=1
-size=3
-stride=1
-pad=1
-activation=relu
+activation=linear
 
-#conv5_2/sep
+[shortcut]
+from=-4
+activation=linear
+
+
+# block 3-1
 [convolutional]
-batch_normalize=1
-filters=128
+filters=96
 size=1
 stride=1
 pad=0
-activation=relu
-
-#conv5_3/dw
-[convolutional]
-groups=128
-filters=128
 batch_normalize=1
-size=3
-stride=1
-pad=1
-activation=relu
+activation=hswish
 
-#conv5_3/sep
-[convolutional]
-batch_normalize=1
-filters=128
-size=1
-stride=1
-pad=0
-activation=relu
 
-#conv5_4/dw
 [convolutional]
-groups=128
-filters=128
-batch_normalize=1
-size=3
-stride=1
-pad=1
-activation=relu
-
-#conv5_4/sep
-[convolutional]
-batch_normalize=1
-filters=128
-size=1
-stride=1
-pad=0
-activation=relu
-
-#conv5_5/dw
-[convolutional]
-groups=128
-filters=128
-batch_normalize=1
-size=3
-stride=1
-pad=1
-activation=relu
-
-#conv5_5/sep
-[convolutional]
-batch_normalize=1
-filters=128
-size=1
-stride=1
-pad=0
-activation=relu
-
-#conv5_6/dw
-[convolutional]
-groups=128
-filters=128
-batch_normalize=1
-size=3
+groups=96
+filters=96
+size=5
 stride=2
 pad=1
-activation=relu
+batch_normalize=1
+activation=hswish
 
-#conv5_6/sep
+[convolutional]
+filters=40
+size=1
+stride=1
+pad=0
+batch_normalize=1
+activation=linear
+
+
+#squeeze-n-excitation
+[avgpool]
+
+# squeeze ratio r=4
 [convolutional]
 batch_normalize=1
-filters=128
+filters=10
 size=1
 stride=1
 activation=relu
 
+# excitation
+[convolutional]
+batch_normalize=1
+filters=40
+size=1
+stride=1
+activation=hsigmode
+
+# multiply channels
+[scale_channels]
+from=-4
+
+# block 3-2
+[convolutional]
+filters=240
+size=1
+stride=1
+pad=0
+batch_normalize=1
+activation=hswish
+
+
+[convolutional]
+groups=240
+filters=240
+size=5
+stride=1
+pad=1
+batch_normalize=1
+activation=hswish
+
+[convolutional]
+filters=40
+size=1
+stride=1
+pad=0
+batch_normalize=1
+activation=linear
+
+
+#squeeze-n-excitation
+[avgpool]
+
+# squeeze ratio r=4
+[convolutional]
+batch_normalize=1
+filters=10
+size=1
+stride=1
+activation=relu
+
+# excitation
+[convolutional]
+batch_normalize=1
+filters=40
+size=1
+stride=1
+activation=hsigmode
+
+# multiply channels
+[scale_channels]
+from=-4
+
+[shortcut]
+from=-8
+activation=linear
+
+
+
+# block 3-3
+[convolutional]
+filters=240
+size=1
+stride=1
+pad=0
+batch_normalize=1
+activation=hswish
+
+
+[convolutional]
+groups=240
+filters=240
+size=5
+stride=1
+pad=1
+batch_normalize=1
+activation=hswish
+
+[convolutional]
+filters=40
+size=1
+stride=1
+pad=0
+batch_normalize=1
+activation=linear
+
+
+#squeeze-n-excitation
+[avgpool]
+
+# squeeze ratio r=4
+[convolutional]
+batch_normalize=1
+filters=10
+size=1
+stride=1
+activation=relu
+
+# excitation
+[convolutional]
+batch_normalize=1
+filters=40
+size=1
+stride=1
+activation=hsigmode
+
+# multiply channels
+[scale_channels]
+from=-4
+
+[shortcut]
+from=-8
+activation=linear
+
+
+
+# block 3-4
+[convolutional]
+filters=120
+size=1
+stride=1
+pad=0
+batch_normalize=1
+activation=hswish
+
+
+[convolutional]
+groups=120
+filters=120
+size=5
+stride=1
+pad=1
+batch_normalize=1
+activation=hswish
+
+[convolutional]
+filters=48
+size=1
+stride=1
+pad=0
+batch_normalize=1
+activation=linear
+
+
+#squeeze-n-excitation
+[avgpool]
+
+# squeeze ratio r=4
+[convolutional]
+batch_normalize=1
+filters=12
+size=1
+stride=1
+activation=relu
+
+# excitation
+[convolutional]
+batch_normalize=1
+filters=48
+size=1
+stride=1
+activation=hsigmode
+
+# multiply channels
+[scale_channels]
+from=-4
+
+[route]
+layers=-8
+
+[convolutional]
+batch_normalize=1
+filters=48
+size=1
+stride=1
+activation=relu
+
+
+[shortcut]
+from=-3
+activation=linear
+
+
+
+# block 3-5
+[convolutional]
+filters=144
+size=1
+stride=1
+pad=0
+batch_normalize=1
+activation=hswish
+
+
+[convolutional]
+groups=144
+filters=144
+size=5
+stride=1
+pad=1
+batch_normalize=1
+activation=hswish
+
+[convolutional]
+filters=48
+size=1
+stride=1
+pad=0
+batch_normalize=1
+activation=linear
+
+
+#squeeze-n-excitation
+[avgpool]
+
+# squeeze ratio r=4
+[convolutional]
+batch_normalize=1
+filters=12
+size=1
+stride=1
+activation=relu
+
+# excitation
+[convolutional]
+batch_normalize=1
+filters=48
+size=1
+stride=1
+activation=hsigmode
+
+# multiply channels
+[scale_channels]
+from=-4
+
+
+[shortcut]
+from=-8
+activation=linear
+
+#4-1
+[convolutional]
+filters=288
+size=1
+stride=1
+pad=0
+batch_normalize=1
+activation=hswish
+
+
+[convolutional]
+groups=288
+filters=288
+size=5
+stride=2
+pad=1
+batch_normalize=1
+activation=hswish
+
+[convolutional]
+filters=96
+size=1
+stride=1
+pad=0
+batch_normalize=1
+activation=linear
+
+
+#squeeze-n-excitation
+[avgpool]
+
+
+[convolutional]
+batch_normalize=1
+filters=24
+size=1
+stride=1
+activation=relu
+
+# excitation
+[convolutional]
+batch_normalize=1
+filters=96
+size=1
+stride=1
+activation=hsigmode
+
+# multiply channels
+[scale_channels]
+from=-4
 
 ##################
 #ssh
 [convolutional]
 batch_normalize=1
-filters=64
+filters=32
 size=1
 stride=1
 pad=1
 activation=leaky
 
 [convolutional]
-filters=64
-groups=64
+filters=32
+batch_normalize=1
+size=3
+stride=1
+pad=1
+activation=leaky
+
+
+[route]
+layers = -2
+
+[convolutional]
+filters=16
 batch_normalize=1
 size=3
 stride=1
@@ -286,10 +521,17 @@ pad=1
 activation=leaky
 
 [convolutional]
-filters=64
-groups=64
+filters=16
 batch_normalize=1
-size=1
+size=3
+stride=1
+pad=1
+activation=leaky
+
+[convolutional]
+filters=16
+batch_normalize=1
+size=3
 stride=1
 pad=1
 activation=leaky
@@ -298,72 +540,18 @@ activation=leaky
 layers = -3
 
 [convolutional]
-filters=64
-groups=64
+filters=16
 batch_normalize=1
 size=3
 stride=1
 pad=1
 activation=leaky
 
-[convolutional]
-filters=32
-batch_normalize=1
-size=1
-stride=1
-pad=1
-activation=leaky
-
-
-[convolutional]
-filters=32
-groups=32
-batch_normalize=1
-size=3
-stride=1
-pad=1
-activation=leaky
-
-[convolutional]
-filters=32
-batch_normalize=1
-size=1
-stride=1
-pad=1
-activation=leaky
-
 [route]
-layers = -3
-
-[convolutional]
-filters=32
-groups=32
-batch_normalize=1
-size=5
-stride=1
-pad=1
-activation=leaky
-
-[convolutional]
-filters=32
-batch_normalize=1
-size=1
-stride=1
-pad=1
-activation=leaky
-
-
-
-[route]
-layers = -1,-4
-
-[shortcut]
-from=-1,-10
-activation=leaky
+layers = -1,-3,-7
 
 
 [convolutional]
-batch_normalize=1
 filters=48
 size=1
 stride=1
@@ -373,7 +561,7 @@ activation=linear
 
 [yolo]
 mask = 6,7,8
-anchors = 12,12,  20,20,  32,32,  48,48,  96,96,  128,128,  196,196,  300,300,  512,512
+anchors = 12,12,  20,20,  32,32,  48,48,  96,96,  128,128,  196,196,  300,300,  430,430
 classes=1
 num=9
 jitter=.35
@@ -385,7 +573,7 @@ truth_thresh = 1
 
 
 [route]
-layers = -16
+layers = -12
 
 [upsample]
 stride=2
@@ -398,7 +586,7 @@ stride=1
 activation=leaky
 
 [route]
-layers = 22
+layers = 56
 
 [convolutional]
 batch_normalize=1
@@ -410,18 +598,30 @@ activation=leaky
 [shortcut]
 activation=leaky
 from=-3
+
 #ssh
 [convolutional]
 batch_normalize=1
-filters=64
+filters=32
 size=1
 stride=1
 pad=1
 activation=leaky
 
 [convolutional]
-filters=64
-groups=64
+filters=32
+batch_normalize=1
+size=3
+stride=1
+pad=1
+activation=leaky
+
+
+[route]
+layers = -2
+
+[convolutional]
+filters=16
 batch_normalize=1
 size=3
 stride=1
@@ -429,10 +629,17 @@ pad=1
 activation=leaky
 
 [convolutional]
-filters=64
-groups=64
+filters=16
 batch_normalize=1
-size=1
+size=3
+stride=1
+pad=1
+activation=leaky
+
+[convolutional]
+filters=16
+batch_normalize=1
+size=3
 stride=1
 pad=1
 activation=leaky
@@ -441,72 +648,18 @@ activation=leaky
 layers = -3
 
 [convolutional]
-filters=64
-groups=64
+filters=16
 batch_normalize=1
 size=3
 stride=1
 pad=1
 activation=leaky
 
-[convolutional]
-filters=32
-batch_normalize=1
-size=1
-stride=1
-pad=1
-activation=leaky
-
-
-[convolutional]
-filters=32
-groups=32
-batch_normalize=1
-size=3
-stride=1
-pad=1
-activation=leaky
-
-[convolutional]
-filters=32
-batch_normalize=1
-size=1
-stride=1
-pad=1
-activation=leaky
-
 [route]
-layers = -3
-
-[convolutional]
-filters=32
-groups=32
-batch_normalize=1
-size=5
-stride=1
-pad=1
-activation=leaky
-
-[convolutional]
-filters=32
-batch_normalize=1
-size=1
-stride=1
-pad=1
-activation=leaky
-
-
-
-[route]
-layers = -1,-4
-
-[shortcut]
-from=-1,-10
-activation=leaky
+layers = -1,-3,-7
 
 
 [convolutional]
-batch_normalize=1
 filters=32
 size=1
 stride=1
@@ -516,7 +669,7 @@ activation=linear
 
 [yolo]
 mask = 4,5
-anchors = 12,12,  20,20,  32,32,  48,48,  96,96,  128,128,  196,196,  300,300,  512,512
+anchors = 12,12,  20,20,  32,32,  48,48,  96,96,  128,128,  196,196,  300,300,  430,430
 classes=1
 num=9
 jitter=.35
@@ -528,7 +681,7 @@ truth_thresh = 1
 
 
 [route]
-layers = -16
+layers = -12
 
 [upsample]
 stride=2
@@ -543,7 +696,7 @@ activation=leaky
 
 
 [route]
-layers = 10
+layers = 15
 
 
 [convolutional]
@@ -558,18 +711,30 @@ activation=leaky
 activation=leaky
 from=-3
 
+
 #ssh
 [convolutional]
 batch_normalize=1
-filters=64
+filters=32
 size=1
 stride=1
 pad=1
 activation=leaky
 
 [convolutional]
-filters=64
-groups=64
+filters=32
+batch_normalize=1
+size=3
+stride=1
+pad=1
+activation=leaky
+
+
+[route]
+layers = -2
+
+[convolutional]
+filters=16
 batch_normalize=1
 size=3
 stride=1
@@ -577,10 +742,17 @@ pad=1
 activation=leaky
 
 [convolutional]
-filters=64
-groups=64
+filters=16
 batch_normalize=1
-size=1
+size=3
+stride=1
+pad=1
+activation=leaky
+
+[convolutional]
+filters=16
+batch_normalize=1
+size=3
 stride=1
 pad=1
 activation=leaky
@@ -589,72 +761,18 @@ activation=leaky
 layers = -3
 
 [convolutional]
-filters=64
-groups=64
+filters=16
 batch_normalize=1
 size=3
 stride=1
 pad=1
 activation=leaky
 
-[convolutional]
-filters=32
-batch_normalize=1
-size=1
-stride=1
-pad=1
-activation=leaky
-
-
-[convolutional]
-filters=32
-groups=32
-batch_normalize=1
-size=3
-stride=1
-pad=1
-activation=leaky
-
-[convolutional]
-filters=32
-batch_normalize=1
-size=1
-stride=1
-pad=1
-activation=leaky
-
 [route]
-layers = -3
-
-[convolutional]
-filters=32
-groups=32
-batch_normalize=1
-size=5
-stride=1
-pad=1
-activation=leaky
-
-[convolutional]
-filters=32
-batch_normalize=1
-size=1
-stride=1
-pad=1
-activation=leaky
-
-
-
-[route]
-layers = -1,-4
-
-[shortcut]
-from=-1,-10
-activation=leaky
+layers = -1,-3,-7
 
 
 [convolutional]
-batch_normalize=1
 filters=64
 size=1
 stride=1
@@ -664,7 +782,7 @@ activation=linear
 
 [yolo]
 mask = 0,1,2,3
-anchors = 12,12,  20,20,  32,32,  48,48,  96,96,  128,128,  196,196,  300,300,  512,512
+anchors = 12,12,  20,20,  32,32,  48,48,  96,96,  128,128,  196,196,  300,300,  430,430
 classes=1
 num=9
 jitter=.35
